# graphics-class

./: .eslintrc.cjs  .gitignore  Cargo.toml  astro.config.mjs  build-rust.mjs  cat.blend  install.sh  kermit.blend  kermit.blend1  package.json  pnpm-lock.yaml  skycube.blend  turbo.json  vite.config.ts
src/: content-page.css  env.d.ts
src/layouts/: content-page.astro  site.astro
src/pages/: final.astro  index.astro  midterm-skybox.astro  midterm.astro  proj-1.astro  proj-2.astro  proj-3.astro  proj-4.astro
src/pages/proj-1/: app.css  app.tsx  graphics.ts  index.astro
src/pages/proj-2/: app.css  app.tsx  graphics.ts  index.mdx  transforms.ts
src/pages/proj-3/: app.tsx  cat.mtl  graphics.ts  index.mdx  vertex-shader.glsl
src/projects/final/: Cargo.toml  app.css  app.tsx  face.rs  fragment-shader.glsl  graphics.rs  graphics.ts  index.mdx  layer-fragment-shader.glsl  layer-render.ts  layer-vertex-shader.glsl  load_obj.rs  skybox-fragment-shader.glsl  vertex-shader.glsl
src/projects/midterm/: Cargo.toml  app.css  app.tsx  bounding_box.rs  dead_end.rs  face.rs  fragment-shader.glsl  graphics.rs  graphics.ts  index.mdx  landing.rs  load-obj.ts  load_obj.rs  maze.rs  ray.rs  skybox-vertex-shader.glsl  tunnel.rs  vertex-shader.glsl
src/projects/midterm-skybox/: Cargo.toml  app.css  app.tsx  graphics.ts  index.mdx  load_obj.rs  skybox-vertex-shader.glsl  vertex-shader.glsl
src/projects/proj-1/: app.css  fragment-shader.glsl  graphics.ts  vertex-shader.glsl
src/projects/proj-2/: app.css  app.tsx  index.mdx  (+2 more)
vite-playground/: index.html  vite-playground.tsx
(+29 files in other folders)
